--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -29,9 +29,10 @@ jobs:
         with:
           node-version: 20
           cache: npm
+          cache-dependency-path: site/package-lock.json
 
       - name: Install
-        run: npm install
+        run: npm ci
         working-directory: site
 
       - name: Build
