Add collaps(MPV dont work)

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -59,4 +59,5 @@ koin-androidx-compose = { group = "io.insert-koin", name = "koin-androidx-compos
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
+android-library = { id = "com.android.library", version.ref = "agp" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
